tests/cases/memory/errors/nullable-qualified.ari
fn main() -> i64 {
  let bad: ptr i64? = null;
  return 0;
}
